Fix to bootstrap navbar collapse, prevented btn-group overlapping outside of nav

--- a/Olog/public_html/static/css/style.scss
+++ b/Olog/public_html/static/css/style.scss
@@ -301,7 +301,7 @@ pre{
 	nav.navbar{
 		.nav-btn-group{
 			ul.dropdown-menu{
-				position:relative;
+				position:absolute;
 			}
 		}
 	}
@@ -353,6 +353,16 @@ pre{
 	.well{
 		border-top:1px solid $gray-500;
 		border-bottom:1px solid $gray-500;
+	}
+}
+
+@media (max-width: 768px){
+	nav.navbar{
+		.nav-btn-group{
+			ul.dropdown-menu{
+				position:relative;
+			}
+		}
 	}
 }
 
